test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/parenthesized_array_of_functions.plx
# Basically the same test case as array_of_functions.c
# In other implementations this might be a type error, not a parse error
pub fn foo([3], a: i32) i32;
